<resources>
    <string name="app_name" translatable="false">Parked Car</string>
    <string name="bluetooth_settings"><a href="">Bluetooth Settings</a></string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Parked Car</string>
    <!--<string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>-->
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_park">Parking Location</string>
    <string name="nav_bluetooth">Bluetooth</string>
    <string name="nav_google_maps_section">Google Maps</string>
    <string name="nav_google_maps">Show in Maps</string>
    <string name="nav_directions">Directions</string>
    <string name="nav_other_section">Other</string>
    <string name="nav_settings">Settings</string>

    <!--Park button-->
    <string name="park_btn_park_car">Park Car</string>
    <string name="park_btn_working">Working&#8230;</string>
    <string name="park_btn_clear">Clear</string>

    <!--Bluetooth -->
    <string name="bluetooth_view_info">Choose your car on a list of Bluetooth devices below.</string>
    <string name="bluetooth_view_info_extra">Don\'t see your car? Make sure it is paired with your phone first.</string>
    <string name="bluetooth_unavailable_message">Bluetooth is either unavailable or disabled.</string>
    <string name="bluetooth_unavailable_dialog_title">Error</string>
    <string name="bluetooth_unavailable_dialog_msg">Your device doesn\'t support Bluetooth.</string>
    <string name="bluetooth_unavailable_dialog_pos_btn">Exit</string>
    <string name="bluetooth_unavailable_dialog_net_btn">Cancel</string>


    <string name="your_car_marker">Your Car</string>

    <!--Parking time durations-->
    <string name="parking_time_day">d.</string>
    <string name="parking_time_hour">hr.</string>
    <string name="parking_time_min">min.</string>
    <string name="parking_time_parked_ago">\u0020ago</string>

    <!--Parking type-->
    <string name="parking_type_auto">Parked automatically\u0020</string>
    <string name="parking_type_manual">Parked manually\u0020</string>

    <!--Notifications-->
    <string name="notification_title" translatable="false">Parked Car</string>
    <string name="notification_text">Your Car has been marked on the map</string>
    <string name="foreground_notification_text">Getting location of your car&#8230;</string>
    <string name="notification_action_maps">Map</string>
    <string name="notification_action_directions">Directions</string>
    <string name="notification_action_clear">Clear</string>

    <!--Accuracy-->
    <string name="accuracy_text">Accuracy</string>
    <string name="accuracy_unit">m.</string>

    <!--Location-->
    <string name="location_permission_title">Error</string>
    <string name="location_permission_text">Application requires location permission in order
        to work properly. You can grant this permission in application settings.</string>
    <string name="location_permission_settings_btn">Settings</string>
    <string name="location_permission_exit_btn">Exit</string>
    <string name="location_not_available_title">Error</string>
    <string name="location_not_available_text">Sorry&#8230; Unable to receive accurate location
        from the device in reasonable amount of time. You may verify device\'s location settings
        and try again afterwards.</string>
    <string name="location_not_available_ok_btn">OK</string>
    <string name="location_disabled_title">Error</string>
    <string name="location_disabled_text">Location is disabled on your device or
        airplane mode is active. Please, enable location in order to use this application.</string>
    <string name="location_disabled_settings_btn">Settings</string>
    <string name="location_disabled_exit_btn">Exit</string>

    <string name="when_label" translatable="false">When:</string>
    <string name="when_info" translatable="false">2018-01-22, 11:45</string>
    <string name="location_label" translatable="false">Location:</string>
    <string name="location_info" translatable="false">near High Road 23</string>

    <!--Preferences-->
    <string name="pref_behaviour">Behaviour</string>
    <string name="pref_key_show_notif" translatable="false">pref_show_notif</string>
    <string name="pref_show_notif">Show Notifications</string>
    <string name="pref_key_about_settings" translatable="false">pref_about_settings</string>
    <string name="pref_about">About</string>
    <string name="pref_key_rate" translatable="false">pref_rate</string>
    <string name="pref_rate_summary">Rate Parked Car on Play Store</string>
    <string name="pref_rate_title" translatable="false">❤ Parked Car</string>
    <string name="pref_key_version" translatable="false">pref_version</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_rate_not_in_market_error">Unable to find this app in Google Play market</string>
    <string name="parking_not_set_message">Car not parked</string>

    <!--Accessibility-->
    <string name="bluetooth_ticker">Choose this device to listen to it\'s Bluetooth state change</string>
    <string name="park_car_button">Park Car button</string>
    <string name="location_not_received_message">Can\'t receive location.</string>
</resources>
