<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_behaviour_settings"
        android:title="@string/pref_behaviour">

        <SwitchPreference
            android:defaultValue="@bool/pref_show_notif_default"
            android:key="@string/pref_key_show_notif"
            android:title="@string/pref_show_notif" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_about_settings"
        android:title="@string/pref_about">


        <Preference
            android:key="@string/pref_key_rate"
            android:summary="@string/pref_rate_summary"
            android:title="@string/pref_rate_title" />

        <Preference
            android:key="@string/pref_key_version"
            android:summary="@string/app_version"
            android:title="@string/pref_version_title" />

    </PreferenceCategory>
</PreferenceScreen>