<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_view_info"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_view_info_extra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bluetooth_settings_link"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:clickable="true"
            android:text="@string/bluetooth_settings"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bluetooth_list"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>

    </LinearLayout>
