<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unagit.parkedcar.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:layout_width="200dp"
                android:maxWidth="200dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/park_car"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/park_car"/>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="0dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/when_label"/>
                    <TextView
                        android:layout_weight="2"
                        android:maxLines="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/when_info"/>
                    </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:layout_width="0dp"
                        android:text="@string/location_label"/>
                    <TextView
                        android:layout_weight="2"
                        android:maxLines="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/location_info"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFDF32"
            android:layout_weight="2"/>
    </LinearLayout>
</FrameLayout>
